# squirrel-queue

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run.py
.squirrel/: .gitignore
.squirrel/config/: CONSTITUTION.md  ROLE.md  control_interface.md
.squirrel/registry/: sq_2026_0001.json
.squirrel/schemas/: receipt.schema.json  state_machine.json  task.schema.json  work_packet.schema.json
codex-queue/: .gitignore  README.md  index.js  package.json
codex-queue/.github/workflows/: ci.yml
codex-queue/docs/: filesystem-adapter.md  openclaw-adapter.md
codex-queue/docs/reference/: EASY_MODE_SETUP.md
codex-queue/examples/filesystem/: defer-to-log.sh
codex-queue/examples/openclaw/: defer-to-openclaw.sh
codex-queue/test/: checks.js
scripts/: squirrel-console.sh
squirrel/: __init__.py  cli.py  events.py  intake.py  lane_codex_queue.py  lanes.py  planner.py  receipts.py  runner.py  state.py  validation.py
tests/: test_events.py  test_intake.py  test_lanes.py  test_planner.py  test_planner_roles.py  test_receipts.py  test_runner.py  test_state.py  test_validation.py
